<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseMaterialTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/view_app_bar_setting">

    <ScrollView
        style="@style/ConstraintBodyStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/ConstraintBodyStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <TextView
                android:id="@+id/tv_title_setting"
                style="@style/TextViewTitleWithoutBackgroundStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_24dp"
                android:layout_marginTop="@dimen/_12dp"
                android:text="@string/setting_theme_title"
                android:textSize="@dimen/_24sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:id="@+id/ll_theme_setting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8dp"
                android:layout_marginTop="@dimen/_18dp"
                android:background="@drawable/bg_rounded_only_outlined"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_setting">

                <TextView
                    android:id="@+id/tv_theme_title"
                    style="@style/TextViewWithoutBackgroundStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_rounded_only_outlined"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_8dp"
                    android:text="@string/setting_theme_title"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/switch_theme"
                    style="@style/SwitchStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_8dp"
                    android:text="@string/setting_dark_mode"
                    android:textSize="@dimen/_18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_profile_title"
                style="@style/TextViewTitleWithoutBackgroundStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_24dp"
                android:text="@string/setting_text_profile_title"
                android:textSize="@dimen/_24sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_theme_setting" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile_title">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_profile_name_title"
                        style="@style/TextViewWithoutBackgroundStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:text="@string/setting_text_profile_name_title"
                        android:textSize="@dimen/_14sp" />

                    <TextView
                        android:id="@+id/tv_profile_name"
                        style="@style/TextViewWithoutBackgroundStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_text_profile_name"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_profile_class_title"
                        style="@style/TextViewWithoutBackgroundStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2.5"
                        android:text="@string/setting_text_profile_class_title"
                        android:textSize="@dimen/_14sp" />

                    <TextView
                        android:id="@+id/tv_profile_class"
                        style="@style/TextViewWithoutBackgroundStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/setting_text_profile_class"
                        android:textSize="@dimen/_14sp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />

            <TextView
                android:id="@+id/tv_app_title"
                style="@style/TextViewWithoutBackgroundStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:gravity="center"
                android:paddingVertical="@dimen/_8dp"
                android:text="@string/setting_support_title"
                android:textSize="@dimen/_14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_setting" />

            <ImageView
                android:id="@+id/iv_indhestory"
                android:layout_width="@dimen/_85dp"
                android:layout_height="@dimen/_85dp"
                android:layout_marginStart="@dimen/_12dp"
                android:contentDescription="@string/cd_indhestory"
                android:src="@drawable/ic_indhestory"
                app:layout_constraintEnd_toStartOf="@+id/guideline_app"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_title" />

            <ImageView
                android:id="@+id/iv_fishapp"
                android:layout_width="@dimen/_85dp"
                android:layout_height="@dimen/_85dp"
                android:layout_marginEnd="@dimen/_12dp"
                android:contentDescription="@string/cd_fishapp"
                android:src="@drawable/ic_fishapp"
                app:layout_constraintEnd_toEndOf="@+id/tv_app_title"
                app:layout_constraintStart_toStartOf="@+id/guideline_app"
                app:layout_constraintTop_toBottomOf="@+id/tv_app_title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.78" />

            <ImageView
                android:id="@+id/iv_bitcoinnews"
                android:layout_width="0dp"
                android:layout_height="@dimen/_65dp"
                android:layout_marginTop="@dimen/_8dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_bitcoinnews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/iv_indhestory" />

            <ImageView
                android:id="@+id/iv_indhegram"
                android:layout_width="0dp"
                android:layout_height="@dimen/_60dp"
                android:layout_marginTop="@dimen/_12dp"
                android:contentDescription="@string/cd_indhegram"
                android:src="@drawable/ic_indhegram"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/iv_bitcoinnews" />

            <TextView
                android:id="@+id/tv_about_title"
                style="@style/TextViewTitleWithoutBackgroundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_24dp"
                android:text="@string/setting_text_about_title"
                android:textSize="@dimen/_24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_indhegram" />

            <TextView
                android:id="@+id/tv_about_description_1"
                style="@style/TextViewWithoutBackgroundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="8dp"
                android:justificationMode="inter_word"
                android:text="@string/setting_text_description_1"
                android:textSize="@dimen/_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_title" />

            <TextView
                android:id="@+id/tv_about_description_2"
                style="@style/TextViewWithoutBackgroundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_4dp"
                android:justificationMode="inter_word"
                android:text="@string/setting_text_description_2"
                android:textSize="@dimen/_14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_description_1" />

            <TextView
                android:id="@+id/tv_about_description_3"
                style="@style/TextViewWithoutBackgroundStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20dp"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_marginBottom="@dimen/_12dp"
                android:justificationMode="inter_word"
                android:linksClickable="true"
                android:text="@string/setting_text_description_3"
                android:textSize="@dimen/_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_about_description_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>